k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: mlops-ingress
  namespace: mlops

spec:
  ingressClassName: nginx

  rules:
    - host: mlops.local

      http:
        paths:

          - path: /api
            pathType: Prefix

            backend:
              service:
                name: backend
                port:
                  number: 5000

          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend
                port:
                  number: 80
